Drag mouse to create walls

--- a/src/Components/Board/Node.css
+++ b/src/Components/Board/Node.css
@@ -16,3 +16,11 @@
 .wall {
     background-color: black;
 }
+
+.startNode {
+    background-color: green;
+}
+
+.endNode {
+    background-color: red;
+}
