--- a/src/Components/Board/Node.css
+++ b/src/Components/Board/Node.css
@@ -24,3 +24,15 @@
 .endNode {
     background-color: red;
 }
+
+.iron-man-red {
+    background-color: red;
+}
+
+.iron-man-yellow {
+    background-color: yellow;
+}
+
+.iron-man-blue {
+    background-color: blue;
+}
